--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <!-- feature section //end -->
 
         <!-- donation section -->
-        <section class="bg-white py-16">
+        <!--section class="bg-white py-16">
 
             <div class="container max-w-screen-xl mx-auto px-4">
 
@@ -397,12 +397,12 @@
                     </div>
 
                     <div class="lg:relative py-4 lg:py-0">
-                        <h1 class="font-semibold text-white text-xl md:text-4xl text-center lg:text-left leading-normal md:mb-5 lg:mb-10">Interested in volunteering? Join <br> with us now</h1>
+                        <h1 class="font-semibold text-white text-xl md:text-4xl text-center lg:text-left leading-normal md:mb-5 lg:mb-10">¿Quieres aportar a New Begginigs?<br> ¡Déjanos tu correo!</h1>
 
                         <div class="hidden md:block flex items-center text-center lg:text-left space-x-5">
                             <input type="text" placeholder="Email" class="px-4 py-4 w-96 bg-gray-50 placeholder-gray-400 rounded-xl outline-none">
 
-                            <button class="px-6 py-4 font-semibold bg-gray-50 text-info text-lg rounded-xl hover:bg-blue-500 hover:text-white transition ease-in-out duration-500">Join</button>
+                            <button class="px-6 py-4 font-semibold bg-gray-50 text-info text-lg rounded-xl hover:bg-blue-600 hover:text-white transition ease-in-out duration-500">Enviar</button>
                         </div>
                     </div>
                 </div>
@@ -419,10 +419,10 @@
 
                     <div class="space-y-7 mb-10 lg:mb-0">
                         <div class="flex justify-center lg:justify-start">
-                            <img src="assets/image/footer-logo.png" alt="Image">
+                            <img src="assets/image/navbar-logo3.png" alt="Image">
                         </div>
                         
-                        <p class="font-light text-gray-400 text-md md:text-lg text-center lg:text-left">Donate and help others people <br> around the world</p>
+                        <p class="font-light text-gray-400 text-md md:text-lg text-center lg:text-left">Encuentranos en nuestras <br> redes sociales</p>
 
                         <div class="flex items-center justify-center lg:justify-start space-x-5">
                             <a href="#" class="px-3 py-3 bg-gray-200 text-gray-700 rounded-full hover:bg-info hover:text-white transition ease-in-out duration-500">
